gocd-config/06-gocd-agent-deploy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: gocd-agent-deploy
  labels:
    app: gocd
    component: agent
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gocd
      component: agent
  template:
    metadata:
      labels:
        app: gocd
        component: agent
    spec:
      serviceAccountName: default
      containers:
        - name: gocd-agent
          image: "gocd/gocd-agent-alpine-3.6:v19.2.0"
          imagePullPolicy: IfNotPresent
          resources:
            {}

          securityContext:
            privileged: false
      restartPolicy: Always
