gocd-config/05-gocd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocd-server
  annotations:
  labels:
    app: gocd
    component: server
spec:
  type: NodePort

  ports:
    - port: 8153
      targetPort: 8153
      protocol: TCP
      name: http

    - port: 8154
      targetPort: 8154
      protocol: TCP
      name: https
  selector:
    app: gocd
    component: server
